@@ -150,6 +150,13 @@ Java_org_xcsoar_NativeView_initializeNative(JNIEnv *env, jobject obj,
   return Startup();
 }
 
+void
+OnLogCatFinished(bool crash_found)
+{
+  if (crash_found)
+    CommonInterface::main_window->SendCrash();
+}
+
 gcc_visibility_default
 JNIEXPORT void JNICALL
 Java_org_xcsoar_NativeView_runNative(JNIEnv *env, jobject obj)
@@ -158,14 +165,7 @@ Java_org_xcsoar_NativeView_runNative(JNIEnv *env, jobject obj)
 
   OpenGL::Initialise();
 
-  if (CheckLogCat())
-    ShowMessageBox(_T("How embarassing, we're terribly sorry!\n"
-                      "Please submit a bug report and "
-                      "include the file from the 'crash' directory.\n"
-                      "http://bugs.xcsoar.org/newticket\n"
-                      "After your report, we'll fix it ASAP."),
-                   _T("XCSoar has crashed recently"),
-                   MB_OK|MB_ICONERROR);
+  CheckLogCat(*io_thread);
 
   CommonInterface::main_window->RunEventLoop();
 }
@@ -174,6 +174,8 @@ gcc_visibility_default
 JNIEXPORT void JNICALL
 Java_org_xcsoar_NativeView_deinitializeNative(JNIEnv *env, jobject obj)
 {
+  StopLogCat();
+
   InitThreadDebug();
 
   delete CommonInterface::main_window;
